# taskito

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  NODE_SDK_TODO.md  README.md  mkdocs.yml  pyproject.toml  taskito-resource-system-layers.md  zensical.toml
.github/: dependabot.yml  labeler.yml
.github/workflows/: actionlint.yml  ci-java.yml  ci-node.yml  ci-python.yml  ci-rust.yml  ci.yml  cleanup.yml  codeql.yml  dashboard.yml  docs-next.yml  (+7 more)
crates/taskito-core/: BINDING_CONTRACT.md  Cargo.toml  README.md
crates/taskito-core/examples/: hello.rs
crates/taskito-core/migrations/: m0001_initial.rs  m0002_scaling_indexes.rs  m0003_retention_indexes.rs  m0004_postgres_tuning.rs  m0005_topic_messages.rs  m0006_topics.rs  m0007_topic_deliveries.rs  mod.rs
crates/taskito-core/src/: error.rs  job.rs  lib.rs  periodic.rs  pubsub.rs  retry.rs  scheduler.rs  settings.rs  worker.rs
crates/taskito-core/src/resilience/: circuit_breaker.rs  dlq.rs  mod.rs  rate_limiter.rs  retry.rs
crates/taskito-core/src/scheduler/: codel.rs  maintenance.rs  mod.rs  poller.rs  result_handler.rs  retention.rs  wake.rs
crates/taskito-core/src/storage/: cursor.rs  migrate.rs  mod.rs  models.rs  notify.rs  records.rs  schema.rs  traits.rs
crates/taskito-core/src/storage/diesel_common/: archival.rs  dead_letter.rs  jobs.rs  locks.rs  logs.rs  metrics.rs  migrations.rs  mod.rs  pubsub.rs  purge.rs  retention.rs  workers.rs
crates/taskito-core/src/storage/postgres/: archival.rs  circuit_breakers.rs  dashboard_settings.rs  dead_letter.rs  jobs.rs  listener.rs  locks.rs  logs.rs  metrics.rs  mod.rs  periodic.rs  pubsub.rs  queue_state.rs  rate_limits.rs  retention.rs  trait_impl.rs  workers.rs
crates/taskito-core/src/storage/redis_backend/: archival.rs  circuit_breakers.rs  dashboard_settings.rs  dead_letter.rs  jobs.rs  listener.rs  locks.rs  logs.rs  metrics.rs  mod.rs  periodic.rs  pubsub.rs  queue_state.rs  rate_limits.rs  trait_impl.rs  workers.rs
crates/taskito-core/src/storage/redis_backend/jobs/: dequeue.rs  enqueue.rs  errors.rs  helpers.rs  maintenance.rs  mod.rs  query.rs  state.rs
crates/taskito-core/src/storage/sqlite/: archival.rs  circuit_breakers.rs  dashboard_settings.rs  dead_letter.rs  jobs.rs  locks.rs  logs.rs  metrics.rs  mod.rs  periodic.rs  pubsub.rs  queue_state.rs  rate_limits.rs  retention.rs  tests.rs  trait_impl.rs  workers.rs
crates/taskito-core/src/worker/: dispatcher.rs  mod.rs  registry.rs  runner.rs  tests.rs
crates/taskito-core/tests/: rust.rs
crates/taskito-core/tests/rust/: storage_tests.rs
crates/taskito-java/: Cargo.toml
crates/taskito-java/src/: backend.rs  convert.rs  dispatcher.rs  error.rs  ffi.rs  ffi_c.rs  handle.rs  jvm.rs  lib.rs  mesh.rs  queue.rs  worker.rs
crates/taskito-java/src/queue/: admin.rs  inspect.rs  locks.rs  logs.rs  mod.rs  periodic.rs  pubsub.rs
crates/taskito-java/src/workflows/: mod.rs
crates/taskito-mesh/: Cargo.toml
crates/taskito-mesh/src/: config.rs  lib.rs  local_deque.rs  metrics.rs  ring.rs  state.rs
crates/taskito-mesh/src/steal/: mod.rs  protocol.rs  server.rs
crates/taskito-mesh/src/swim/: failure.rs  membership.rs  message.rs  mod.rs
crates/taskito-mesh/tests/: gossip_integration.rs  steal_integration.rs
crates/taskito-node/: Cargo.toml
crates/taskito-node/src/: backend.rs  config.rs  conversion.rs  dispatcher.rs  error.rs  lib.rs  queue.rs  worker.rs
crates/taskito-node/src/convert/: job.rs  lock.rs  log.rs  mod.rs  ops.rs  outcome.rs  periodic.rs  pubsub.rs  stats.rs  task_config.rs  workflow.rs
crates/taskito-node/src/queue/: admin.rs  inspect.rs  locks.rs  logs.rs  mod.rs  periodic.rs  pubsub.rs  workflows.rs
crates/taskito-python/: Cargo.toml
crates/taskito-python/src/: async_worker.rs  lib.rs  py_config.rs  py_job.rs  py_queue.rs  py_worker.rs
crates/taskito-python/src/native_async/: mod.rs  permit.rs  pool.rs  result_sender.rs  task_executor.rs
crates/taskito-python/src/prefork/: child.rs  dispatch.rs  mod.rs  protocol.rs  slot.rs  watchdog.rs
crates/taskito-python/src/py_queue/: inspection.rs  mod.rs  pubsub.rs  worker.rs  workflow_ops.rs
crates/taskito-python/src/py_queue/workflow_ops/: fan_out.rs  gates.rs  lifecycle.rs  mod.rs  nodes.rs  queries.rs  saga.rs  test_helpers.rs
crates/taskito-python/src/py_workflow/: mod.rs
crates/taskito-tui/: Cargo.toml
crates/taskito-tui/src/: app.rs  backend.rs  cli.rs  event.rs  main.rs  util.rs
crates/taskito-tui/src/source/: db.rs  mod.rs
crates/taskito-tui/src/ui/: detail.rs  mod.rs  tables.rs
crates/taskito-workflows/: Cargo.toml  build.rs
crates/taskito-workflows/migrations/: m0001_workflow_initial.rs  m0002_workflow_indexes.rs  mod.rs
crates/taskito-workflows/src/: common.rs  definition.rs  diesel_common.rs  error.rs  lib.rs  node.rs  postgres_store.rs  redis_store.rs  run.rs  sqlite_store.rs  state.rs  storage.rs  tests.rs  topology.rs
crates/taskito-workflows/tests/: storage_contract.rs
dashboard/: .gitignore  biome.json  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
dashboard-next/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: .gitignore  README.md  architecture.md  biome.json  changelog.md  comparison.md  faq.md  index.md  next.config.mjs  package.json  pnpm-lock.yaml  react-router.config.ts  tsconfig.json  vite-plugin-docs-manifest.ts  vite.config.ts
docs-next/: biome.json  docusaurus.config.ts  next.config.mjs  package.json  pnpm-lock.yaml  sidebars.ts
rust/quickq-core/: Cargo.toml
rust/quickq-core/src/: dlq.rs  error.rs  job.rs  lib.rs  rate_limiter.rs  scheduler.rs
rust/quickq-core/src/storage/: models.rs  schema.rs  sqlite.rs
scripts/: capture_docs_screenshots.py  optimize_screenshots.py  sync-changelog.mjs  version.mjs
tests/: test_observability.py  test_prefork.py  test_progress.py  test_publish_workflow.py  test_webhooks.py  test_workflows_analysis.py  test_workflows_gates.py  test_workflows_visualization.py
(+2422 files in other folders)
