[workspace]
members = ["crates/taskito-core", "crates/taskito-python", "crates/taskito-async"]
resolver = "2"

[workspace.dependencies]
diesel = { version = "2.2", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
pq-sys = { version = "0.6", features = ["bundled"] }
uuid = { version = "1", features = ["v7"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
crossbeam-channel = "0.5"
thiserror = "1"
chrono = "0.4"
cron = "0.13"
chrono-tz = "0.10"
log = "0.4"
redis = { version = "0.27", features = ["script"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
pyo3 = { version = "0.22", features = ["multiple-pymethods"] }
async-trait = "0.1"
