[workspace]
members = ["crates/taskito-core", "crates/taskito-python", "crates/taskito-node", "crates/taskito-java", "crates/taskito-workflows", "crates/taskito-mesh", "crates/taskito-tui"]
resolver = "2"

# Shared crate metadata — every member inherits via `x.workspace = true`, so a
# release bumps `version` in exactly one place. `rust-version` is verified by
# the CI msrv job; sea-query 1.x pins the floor at 1.88.
[workspace.package]
version = "0.20.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ByteVeda/taskito"
rust-version = "1.88"

[workspace.dependencies]
diesel = { version = "2.2", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
libsqlite3-sys = { version = "0.37", features = ["bundled"] }
pq-sys = { version = "0.7", features = ["bundled"] }
uuid = { version = "1", features = ["v7"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10"
crossbeam-channel = "0.5"
thiserror = "2"
chrono = "0.4"
cron = "0.16"
chrono-tz = "0.10"
log = "0.4"
redis = { version = "1.2", features = ["script"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
pyo3 = { version = "0.29", features = ["multiple-pymethods"] }
async-trait = "0.1"
dagron-core = { git = "https://github.com/ByteVeda/dagron.git", rev = "d1b61aaf2ed2d516b9a239f089a55b143cb05f65" }
# Programmatic DDL builder — renders dialect-correct schema SQL executed through
# the Diesel connection. `default-features = false` drops the mysql backend and
# derive macros we don't use; `backend-postgres` is enabled per-crate under the
# `postgres` cargo feature.
sea-query = { version = "1", default-features = false, features = ["backend-sqlite"] }

# Release cdylibs ship inside SDK packages; strip + thin-LTO keep them small.
[profile.release]
strip = true
lto = "thin"
