[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "taskito"
version = "0.2.2"
description = "Rust-powered task queue for Python. No broker required."
requires-python = ">=3.9"
license = { file = "LICENSE" }
readme = "README.md"
dependencies = ["cloudpickle>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.8", "mypy>=1.13"]
fastapi = ["fastapi>=0.100.0", "pydantic>=2.0"]
django = ["django>=3.2"]
postgres = []  # PG driver is bundled in the Rust binary; extra exists for discoverability
otel = ["opentelemetry-api", "opentelemetry-sdk"]
docs = ["zensical"]

[tool.maturin]
manifest-path = "crates/taskito-python/Cargo.toml"
python-source = "py_src"
module-name = "taskito._taskito"
features = ["pyo3/extension-module"]

[project.scripts]
taskito = "taskito.cli:main"    

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/python"]

# -- Ruff --

[tool.ruff]
target-version = "py39"
line-length = 99
exclude = [".venv", "target", "dist", "build", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"py_src/taskito/dashboard.py" = ["E501"]  # embedded HTML/JS strings

[tool.ruff.lint.isort]
known-first-party = ["taskito"]

# -- Mypy --

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "taskito._taskito"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cloudpickle"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["django", "django.*"]
ignore_missing_imports = true
