[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "taskito"
version = "0.6.0"
description = "Rust-powered task queue for Python. No broker required."
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = ["cloudpickle>=3.0"]
[project.urls]
Homepage = "https://github.com/pratyush618/taskito"
Documentation = "https://taskito.grigori.in"
Repository = "https://github.com/pratyush618/taskito"
Changelog = "https://github.com/pratyush618/taskito/blob/master/docs/changelog.md"
Issues = "https://github.com/pratyush618/taskito/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0", "ruff>=0.8", "mypy>=1.13"]
fastapi = ["fastapi>=0.100.0", "pydantic>=2.0"]
django = ["django>=3.2"]
postgres = []  # PG driver is bundled in the Rust binary; extra exists for discoverability
redis = []     # Redis driver is bundled in the Rust binary; extra exists for discoverability
otel = ["opentelemetry-api", "opentelemetry-sdk"]
prometheus = ["prometheus-client"]
sentry = ["sentry-sdk"]
msgpack = ["msgpack"]
encryption = ["cryptography"]
flask = ["flask>=2.0"]
aws = ["boto3>=1.20"]
gcs = ["google-cloud-storage>=2.0"]
docs = ["zensical"]

[tool.maturin]
manifest-path = "crates/taskito-python/Cargo.toml"
python-source = "py_src"
module-name = "taskito._taskito"
features = ["extension-module", "postgres", "redis"]

[project.scripts]
taskito = "taskito.cli:main"    

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/python"]

# -- Ruff --

[tool.ruff]
target-version = "py310"
line-length = 99
exclude = [".venv", "target", "dist", "build", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"py_src/taskito/dashboard.py" = ["E501"]  # embedded HTML/JS strings

[tool.ruff.lint.isort]
known-first-party = ["taskito"]

# -- Mypy --

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "taskito._taskito"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cloudpickle"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["opentelemetry", "opentelemetry.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*", "pydantic"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentry_sdk"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "msgpack"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cryptography.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flask"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "click"
ignore_missing_imports = true
