[package]
name = "taskito-core"
version = "0.19.0"
edition = "2021"

[features]
default = []
postgres = ["diesel/postgres", "pq-sys", "openssl-sys"]
redis = ["dep:redis"]
# Event-driven scheduler wakeups. OFF by default — the shipped wheel keeps
# polling. Opt-in for source builds that want lower dispatch latency.
push-dispatch = []

[dependencies]
diesel = { workspace = true }
libsqlite3-sys = { workspace = true }
pq-sys = { workspace = true, optional = true }
openssl-sys = { workspace = true, optional = true }
uuid = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
chrono-tz = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
redis = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
# Raw connection access in the Redis contract tests, to set up race-window
# state and assert on internal index keys. Only used by `#[cfg(feature = "redis")]`
# tests; harmless when the feature is off.
redis = { workspace = true }
