[package]
name = "taskito-java"
version = "0.19.0"
edition = "2021"
description = "Java (JNI) bindings for the Taskito task-queue core"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
postgres = ["taskito-core/postgres", "taskito-workflows?/postgres"]
redis = ["taskito-core/redis", "taskito-workflows?/redis"]
workflows = ["dep:taskito-workflows"]
mesh = ["dep:taskito-mesh"]

[dependencies]
taskito-core = { path = "../taskito-core" }
taskito-workflows = { path = "../taskito-workflows", optional = true }
taskito-mesh = { path = "../taskito-mesh", optional = true }
jni = "0.21"
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1"
tokio = { workspace = true }
async-trait = { workspace = true }
crossbeam-channel = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
gethostname = "1"
