[package]
name = "taskito-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Decentralized mesh scheduling overlay for the Taskito task queue"

[dependencies]
taskito-core = { path = "../taskito-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1"
log = { workspace = true }
rand = { workspace = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
base64 = "0.22"
