[package]
name = "taskito-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Node.js (napi-rs) bindings for the Taskito task-queue core"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
postgres = ["taskito-core/postgres", "taskito-workflows?/postgres"]
redis = ["taskito-core/redis", "taskito-workflows?/redis"]
mesh = ["dep:taskito-mesh"]
workflows = ["dep:taskito-workflows"]

[dependencies]
taskito-core = { path = "../taskito-core" }
napi = { version = "2", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "2"
tokio = { workspace = true }
crossbeam-channel = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
gethostname = "1"
taskito-mesh = { path = "../taskito-mesh", optional = true }
taskito-workflows = { path = "../taskito-workflows", optional = true }

[build-dependencies]
napi-build = "2"
