[package]
name = "taskito-python"
version = "0.12.2"
edition = "2021"

[features]
default = []
extension-module = ["pyo3/extension-module"]
postgres = ["taskito-core/postgres"]
redis = ["taskito-core/redis"]
native-async = ["dep:taskito-async"]
workflows = ["dep:taskito-workflows"]

[lib]
name = "_taskito"
crate-type = ["cdylib"]

[dependencies]
taskito-core = { path = "../taskito-core" }
pyo3 = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
taskito-async = { path = "../taskito-async", optional = true }
taskito-workflows = { path = "../taskito-workflows", optional = true }
serde_json = { workspace = true }
serde = { workspace = true }
base64 = "0.22"
log = { workspace = true }
pyo3-log = "0.11"
gethostname = "1.1.0"
