[package]
name = "taskito-python"
version = "0.16.3"
edition = "2021"

[features]
default = []
extension-module = ["pyo3/extension-module"]
postgres = ["taskito-core/postgres", "taskito-workflows?/postgres"]
redis = ["taskito-core/redis", "taskito-workflows?/redis"]
native-async = []
workflows = ["dep:taskito-workflows"]
# Event-driven scheduler wakeups. OFF by default (not in maturin defaults).
push-dispatch = ["taskito-core/push-dispatch"]
mesh = ["dep:taskito-mesh"]

[lib]
name = "_taskito"
crate-type = ["cdylib"]

[dependencies]
taskito-core = { path = "../taskito-core" }
pyo3 = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
taskito-workflows = { path = "../taskito-workflows", optional = true }
taskito-mesh = { path = "../taskito-mesh", optional = true }
serde_json = { workspace = true }
serde = { workspace = true }
base64 = "0.22"
log = { workspace = true }
pyo3-log = "0.13"
gethostname = "1.1.0"
