[package]
name = "taskito-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Headless terminal UI for inspecting and operating a Taskito queue"

[[bin]]
name = "taskito-tui"
path = "src/main.rs"

[features]
default = []
# Forward backend selection down to core + workflow storage so the same URL
# sniff in backend.rs can open Postgres / Redis when compiled in.
postgres = ["taskito-core/postgres", "taskito-workflows/postgres"]
redis = ["taskito-core/redis", "taskito-workflows/redis"]

[dependencies]
taskito-core = { path = "../taskito-core" }
taskito-workflows = { path = "../taskito-workflows" }
ratatui = "0.30"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
