[package]
name = "taskito-workflows"
version = "0.12.3"
edition = "2021"

[features]
default = []
postgres = ["taskito-core/postgres", "diesel/postgres"]

[dependencies]
taskito-core = { path = "../taskito-core" }
dagron-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
diesel = { workspace = true }
log = { workspace = true }
