[package]
name = "taskito-workflows"
version = "0.18.0"
edition = "2021"

[features]
default = []
postgres = ["taskito-core/postgres", "diesel/postgres"]
redis = ["taskito-core/redis", "dep:redis"]

[dependencies]
taskito-core = { path = "../taskito-core" }
dagron-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
diesel = { workspace = true }
log = { workspace = true }
redis = { workspace = true, optional = true }

[dev-dependencies]
uuid = { workspace = true }
serde_json = { workspace = true }
