[package]
name = "taskito-workflows"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Workflow DAG engine for the Taskito task queue"
# Blocked from crates.io by the dagron-core git dependency; flip once it publishes.
publish = false

[features]
default = []
postgres = ["taskito-core/postgres", "diesel/postgres", "sea-query/backend-postgres"]
redis = ["taskito-core/redis", "dep:redis"]

[dependencies]
taskito-core = { path = "../taskito-core" }
dagron-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
diesel = { workspace = true }
log = { workspace = true }
sea-query = { workspace = true }
redis = { workspace = true, optional = true }

[dev-dependencies]
uuid = { workspace = true }
serde_json = { workspace = true }
