[package]
name = "quickq-core"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { workspace = true }
libsqlite3-sys = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }

[dev-dependencies]
tempfile = "3"
